Wed Aug 30 10:01:59 CEST 2000 Gabriele Bartolini <g.bartol@comune.prato.it>

	* substition of char * returned types to const String & in URL and
	Server classes. This change made me do lots of changes in other files:
	HtFile.cc, HtHTTP.cc, HtConfiguration.*, Document.*, ExternalParser.*,
	Retriever.*.

Tue Aug 30 12:00:00 2000  Toivo Pedaste <toivo@ucs.uwa.edu.au>

	* htlibs/md5.cc, htlibs/md5.h: Generate md5 hash of
	a page and also optionally the modify date.

	* htlibs/mhash_md5.h, htlibs/mhash_md5.c, htlibs/libdefs.h:
	Md5 hash code from libmhash

	* htdig/Retriever.cc: Allow storing m5 hashes of pages
	in order to reject aliases.

	* htcommon/defaults.cc: Options "check_unique_md5" and
	"check_unique_date"
	
Tue Aug 29 08:51:39 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdoc/upgrade.html: Add description of the difference between
	htmerge and htpurge. Mention other httools.

	* htsearch/parser.cc, htsearch/parser.h: Merge in patch by Quim
	Sanmarti <qss@gtd.es> to fix problems with phrase searching and
	AND searches and improve performance.

Sun Aug 27 22:41:10 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/AndParseTree.cc, htsearch/OrParseTree.cc (Parse):
	Rewrote using new WordToken inherited method. Fixes a bug where
	user input two phrases next to each other.

	* htsearch/ParseTree.cc (Parse): Fix bug where phrases would
	"adsorb" prior query words. Also fix bug where operators were
	incorrectly popped off the stack. Should (hopefully) solve all
	parsing problems.

	* htsearch/*ParseTree.cc (GetLogicalWords): Test for empty list of
	children to prevent potential segfault.

Sat Aug 26 18:40:50 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* installdir/{syntax, header, footer, wrapper, nomatch}.html: 
	Add DTD tags, ALT attributes and remove bogus </select> tags to
	fix invalid HTML pointed out in PR#901.

Wed Aug 23 23:39:18 2000  Geoff Hutchison  <ghutchis@wso.williams.edu>
