@@ -37,6 +37,8 @@
 	</font> <br>
 	<strong>C</strong> <font face="helvetica,arial" size="2"><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#case_sensitive">case_sensitive</a><br>
+	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#check_unique_md5">check_unique_md5</a><br>
+	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#check_unique_date">check_unique_date</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#collection_names">collection_names</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#common_dir">common_dir</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#common_url_parts">common_url_parts</a><br>
@@ -115,6 +117,7 @@
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#maximum_page_buttons">maximum_page_buttons</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#maximum_pages">maximum_pages</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#maximum_word_length">maximum_word_length</a><br>
+	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#md5_db">md5_db</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#meta_description_factor">meta_description_factor</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#metaphone_db">metaphone_db</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#method_names">method_names</a><br>
